Confirm color contrast, fix code in links, clean up content & stray divs

--- a/assets/scss/components/_archive-item.scss
+++ b/assets/scss/components/_archive-item.scss
@@ -11,7 +11,6 @@
   margin-top: $tiny-spacing;
   margin-bottom: $tiny-spacing;
   color: var(--color-text);
-  opacity: 0.85;
 }
 
 .archive-item__meta {
@@ -22,6 +21,7 @@
   position: relative;
   z-index: 2;
   font-size: var(--fs-small);
+  color: var(--color-text-alt);
 }
 
 .archive-item__date {
